# Lambda-MCP-Server

./: .env.example  Dockerfile  INTEGRATION_TEST_RESULTS.md  README-STANDALONE.md  README.md  REAL_INTEGRATION_TESTS_TODO.md  Taskfile.yaml  docker-compose-run.sh  docker-compose.yml  integration_tests.py  mcp-proxy.Dockerfile  mcp-proxy.js  mcp_config.json  mcp_inspector_config.json  pyproject.toml  root_cause_analysis.md  run_integration_tests.sh  samconfig.toml  template.yaml  test-mcp-connection.js  test-mcp-server.sh  test_container_locally.py  test_direct_tool_call.js  test_mcp_integration.sh  test_mcp_protocol.py  test_standalone_server.py  test_summary.md
app/: event_store.py  main.py  server.py
client-http-typescript-docker/: run-client.sh  test_typescript_client.js
client-http-typescript-docker/client/: package.json
client-http-typescript-docker/client/src/: MCPClient.ts
client-http-typescript-docker/client/src/config/: bedrock.ts
server-http-python-lambda/: Dockerfile  README-ARCHITECTURE.md  samconfig.toml  standalone_server.py  template.yaml  test_standalone_import.py
server-http-python-lambda/authorizer/: app.py
server-http-python-lambda/layers/chrome-layer/: build.sh
server-http-python-lambda/server/: app.py  requirements.txt
server-http-python-lambda/server/lambda_mcp/: lambda_mcp.py  session.py
