[project]
name = "mcp-lambda-container"
version = "0.1.0"
description = "MCP StreamableHttp server as AWS Lambda container"
authors = [
    {name = "Devin AI", email = "devin-ai-integration-bot@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.9.0",
    "mangum>=0.19.0",
    "uvicorn>=0.34.2",
    "starlette>=0.46.2",
    "anyio>=4.7.0",
    "pydantic>=2.10.4",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
